SUREFIRE-1909 Support JUnit 5 reflection access by changing add-exports to add-opens
Signed-off-by: Nils Renaud <renaud.nils@gmail.com>

(cherry picked from commit 6b4ccdd19f904cdef710a126e2b9af4b1c7b60df)
Signed-off-by: Nils Renaud <renaud.nils@gmail.com>